# annotated-jax

./: README.md  pyproject.toml
01_basics/: 06_vmap.ipynb  07_autodiff_and_linear_regression.ipynb  08_ann_optax_flax.ipynb  09_lin_reg_optax.ipynb  10_mini_batches_dataloading.ipynb
basics/: 01_basic_matrix.ipynb  02_differentiation.ipynb  03_diff_on_vectors.ipynb  04_random_numbers_and_arrays.ipynb  05_jit.ipynb
utils/: __init__.py  device.py  pre_polarity.py  sanity_check.py
