[project]
name = "annotated-jax"
version = "0.1.0"
description = "deep Learning examples using the jax ai stack"
readme = "README.md"
authors = [
    { name = "Shawon Ashraf" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "einops>=0.8.2",
    "ipython>=9.11.0",
    "ipywidgets>=8.1.8",
    "jax-ai-stack[tfds]>=2025.10.28",
    "jax[cuda]>=0.8.0",
    "jupyterlab>=4.5.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "palmerpenguins>=0.1.6",
    "pandas>=3.0.1",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "wandb>=0.25.1",
]
