[project]
name = "annotated-jax"
version = "0.1.0"
description = "deep Learning examples using the jax ai stack"
readme = "README.md"
authors = [
    { name = "Shawon Ashraf" }
]
requires-python = ">=3.13"
dependencies = [
    "chex>=0.1.91",
    "datasets>=4.8.3",
    "einops>=0.8.2",
    "flax>=0.12.7",
    "grain>=0.2.16",
    "ipython>=9.11.0",
    "ipywidgets>=8.1.8",
    "jax-mps>=0.10.0 ; sys_platform == 'darwin'",
    "jax[cpu]>=0.10.0; sys_platform == 'darwin'",
    "jax[cuda]>=0.10.0; sys_platform == 'linux'",
    "jupyterlab>=4.5.9",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "ml-dtypes>=0.5.3",
    "optax>=0.2.8",
    "orbax-checkpoint>=0.11.39",
    "orbax-export>=0.0.8",
    "palmerpenguins>=0.1.6",
    "pandas>=3.0.1",
    "pillow>=12.3.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.9",
    "wandb>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
